Fix word-wrap css

--- a/static/style.css
+++ b/static/style.css
@@ -52,7 +52,7 @@ a {
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  color: #000
+  color: #000;
   word-wrap: break-word;
 }
 
